# NOTEtoolsLM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.html  package.json  server.js
.agentdock/project-brain/: current-state.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
desktop/tauri/: Cargo.toml  tauri.conf.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY-PAGES.md  LAUNCH_PLAYBOOK.md  ROADMAP.md  SECURITY.md  index.html  install.html  openapi.yaml  privacy-policy.html  privacy-policy.md  style.css
docs/assets/: demo-gif-script.md  demo.webm
docs/chrome-web-store/: STORE_ASSETS.md  (+2 more)
extension/: manifest.json
extension-firefox/: manifest.json
lib/: artifact-catalog.js  auth.js  cdi.js  db.js  logger.js  portfolio-export.js  prefabs.js  queue.js  sdk-wrapper.js  sources-export.js  vault-store.js  zip-export.js
public/: index.html
scripts/: auth-check.js  build-firefox.js  capture-demo-gif.js  capture-launch-screenshots.js  generate-icons.js  package-extension.js  seed-dev.js
tests/: api.auth.test.js  api.inspector.test.js  api.projects.test.js  api.queue.test.js  api.rbac.test.js  api.sdk-real.test.js  api.vault.test.js  api.webhook.test.js  api.workspace.test.js  artifact-catalog.test.js  cdi.test.js  manifest.test.js  portfolio-export.test.js  prefabs.test.js  sdk-status.test.js  sdk-wrapper.test.js  server.test.js  sources-export.test.js  vault-store.test.js  zip-export.test.js
(+35 files in other folders)
