[package]
name = "notetoolslm-desktop"
version = "2.2.0"
description = "NOTEtoolsLM Desktop"
authors = ["NOTEtoolsLM Collective"]
license = "MIT"
repository = "https://github.com/notetoolslm/notetoolslm"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
